@@ -2,11 +2,12 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.99 [20160229] [svn:r156]
+Changelog for smp_utils-0.99 [20160326] [svn:r157]
   - smp_discover(_list): add --dsn option to show
     device slot number in single line per phy summary
     - attached SAS device type, word SAS added (spl4r01)
     - add SAS connector types, shared with NVMe (ses3r8)
+    - add buffered phy burst size field (spl4r07)
  - add G5 (22.5 Gbps) settings [spl4r06]
  - sync with spl4r06
 
